src/observer/sql/parser/yacc_sql.output
State 69 conflicts: 1 shift/reduce


Grammar

    0 $accept: commands $end

    1 commands: command_wrapper opt_semicolon

    2 command_wrapper: calc_stmt
    3                | select_stmt
    4                | insert_stmt
    5                | update_stmt
    6                | delete_stmt
    7                | create_table_stmt
    8                | drop_table_stmt
    9                | show_tables_stmt
   10                | desc_table_stmt
   11                | create_index_stmt
   12                | drop_index_stmt
   13                | sync_stmt
   14                | begin_stmt
   15                | commit_stmt
   16                | rollback_stmt
   17                | load_data_stmt
   18                | explain_stmt
   19                | set_variable_stmt
   20                | help_stmt
   21                | exit_stmt

   22 exit_stmt: EXIT

   23 help_stmt: HELP

   24 sync_stmt: SYNC

   25 begin_stmt: TRX_BEGIN

   26 commit_stmt: TRX_COMMIT

   27 rollback_stmt: TRX_ROLLBACK

   28 drop_table_stmt: DROP TABLE ID

   29 show_tables_stmt: SHOW TABLES

   30 desc_table_stmt: DESC ID

   31 create_index_stmt: CREATE INDEX ID ON ID LBRACE ID rel_list RBRACE

   32 drop_index_stmt: DROP INDEX ID ON ID

   33 create_table_stmt: CREATE TABLE ID LBRACE attr_def attr_def_list RBRACE

   34 attr_def_list: ε
   35              | COMMA attr_def attr_def_list

   36 attr_def: basic_attr_def
   37         | basic_attr_def SYM_NOT_NULL
   38         | basic_attr_def SYM_NULL

   39 basic_attr_def: ID type LBRACE number RBRACE
   40               | ID type
   41               | ID TEXT_T

   42 number: NUMBER

   43 type: INT_T
   44     | STRING_T
   45     | FLOAT_T
   46     | DATE_T

   47 insert_stmt: INSERT INTO ID VALUES value_rows

   48 value_rows: value_row
   49           | value_rows COMMA value_row

   50 value_row: LBRACE value value_list RBRACE

   51 value_list: ε
   52           | COMMA value value_list

   53 value: non_negative_value
   54      | negative_value

   55 non_negative_value: NUMBER
   56                   | FLOAT
   57                   | SSS
   58                   | DATE_STR
   59                   | SYM_NULL

   60 negative_value: '-' NUMBER
   61               | '-' FLOAT

   62 delete_stmt: DELETE FROM ID where

   63 update_stmt: UPDATE ID SET set_value_list where

   64 set_value_list: set_value
   65               | set_value COMMA set_value_list

   66 set_value: ID EQ expr

   67 select_stmt: SELECT select_expr_list FROM ID rel_list where group_by having order_by
   68            | SELECT function_node_const_list

   69 group_by: ε
   70         | GROUP_BY group_by_list

   71 group_by_list: rel_attr
   72              | rel_attr COMMA group_by_list

   73 calc_stmt: CALC expression_list

   74 expression_list: expression
   75                | expression COMMA expression_list

   76 expression: expression '+' expression
   77           | expression '-' expression
   78           | expression '*' expression
   79           | expression '/' expression
   80           | LBRACE expression RBRACE
   81           | '-' expression
   82           | non_negative_value

   83 rel_attr: ID
   84         | ID DOT ID

   85 rel_list: ε
   86         | COMMA ID rel_list

   87 where: ε
   88      | WHERE expr_list

   89 expr_list: expr
   90          | expr_list AND expr
   91          | expr_list OR expr

   92 expr: non_negative_value
   93     | identifier
   94     | '+' expr
   95     | '-' expr
   96     | expr '+' expr
   97     | expr '-' expr
   98     | expr '*' expr
   99     | expr '/' expr
  100     | expr comp_op expr
  101     | expr SYM_LIKE SSS
  102     | expr SYM_NOT_LIKE SSS
  103     | expr SYM_IN LBRACE sub_query RBRACE
  104     | expr SYM_IN LBRACE expr_set RBRACE
  105     | expr SYM_NOT_IN LBRACE sub_query RBRACE
  106     | expr SYM_NOT_IN LBRACE expr_set RBRACE
  107     | expr SYM_IS_NULL
  108     | expr SYM_IS_NOT_NULL
  109     | LBRACE expr RBRACE
  110     | LBRACE sub_query RBRACE
  111     | SYM_EXISTS LBRACE sub_query RBRACE
  112     | SYM_NOT_EXISTS LBRACE sub_query RBRACE

  113 identifier: ID
  114           | ID DOT ID

  115 sub_query: select_stmt

  116 expr_set: ε
  117         | expr
  118         | expr_set COMMA expr

  119 order_by: ε
  120         | ORDER_BY order_by_list

  121 order_by_list: ε
  122              | order_by_attr
  123              | order_by_attr COMMA order_by_list

  124 order_by_attr: rel_attr
  125              | rel_attr ASC
  126              | rel_attr DESC

  127 comp_op: EQ
  128        | LT
  129        | GT
  130        | LE
  131        | GE
  132        | NE

  133 load_data_stmt: LOAD DATA INFILE SSS INTO TABLE ID

  134 explain_stmt: EXPLAIN command_wrapper

  135 set_variable_stmt: SET ID EQ value

  136 agg_func: SUM LBRACE rel_attr RBRACE
  137         | MAX LBRACE rel_attr RBRACE
  138         | MIN LBRACE rel_attr RBRACE
  139         | AVG LBRACE rel_attr RBRACE
  140         | COUNT LBRACE rel_attr RBRACE
  141         | COUNT LBRACE '*' RBRACE

  142 select_expr: '*'
  143            | agg_func alias
  144            | rel_attr alias
  145            | function_node_all alias

  146 select_expr_list: select_expr
  147                 | select_expr COMMA select_expr_list

  148 having: ε
  149       | HAVING having_list

  150 having_list: expr_has_agg
  151            | having_list AND expr_has_agg
  152            | having_list OR expr_has_agg

  153 expr_has_agg: expr
  154             | agg_func

  155 function_node_const: ROUND LBRACE FLOAT RBRACE
  156                    | ROUND LBRACE FLOAT COMMA NUMBER RBRACE
  157                    | LENGTH LBRACE SSS RBRACE
  158                    | DATE_FORMAT LBRACE SSS COMMA SSS RBRACE

  159 function_node_field: ROUND LBRACE rel_attr RBRACE
  160                    | ROUND LBRACE rel_attr COMMA NUMBER RBRACE
  161                    | LENGTH LBRACE rel_attr RBRACE
  162                    | DATE_FORMAT LBRACE rel_attr COMMA SSS RBRACE

  163 function_node_all: function_node_const
  164                  | function_node_field

  165 function_node_const_list: function_node_const
  166                         | function_node_const COMMA function_node_const_list

  167 alias: ε
  168      | ID
  169      | AS ID

  170 opt_semicolon: ε
  171              | SEMICOLON


Terminals, with rules where they appear

    $end (0) 0
    '*' (42) 78 98 141 142
    '+' (43) 76 94 96
    '-' (45) 60 61 77 81 95 97
    '/' (47) 79 99
    error (256)
    SEMICOLON (258) 171
    CREATE (259) 31 33
    DROP (260) 28 32
    TABLE (261) 28 33 133
    TABLES (262) 29
    INDEX (263) 31 32
    CALC (264) 73
    SELECT (265) 67 68
    DESC (266) 30 126
    SHOW (267) 29
    SYNC (268) 24
    INSERT (269) 47
    DELETE (270) 62
    UPDATE (271) 63
    LBRACE (272) 31 33 39 50 80 103 104 105 106 109 110 111 112 136 137 138 139 140 141 155 156 157 158 159 160 161 162
    RBRACE (273) 31 33 39 50 80 103 104 105 106 109 110 111 112 136 137 138 139 140 141 155 156 157 158 159 160 161 162
    COMMA (274) 35 49 52 65 72 75 86 118 123 147 156 158 160 162 166
    TRX_BEGIN (275) 25
    TRX_COMMIT (276) 26
    TRX_ROLLBACK (277) 27
    INT_T (278) 43
    STRING_T (279) 44
    FLOAT_T (280) 45
    HELP (281) 23
    EXIT (282) 22
    DOT (283) 84 114
    INTO (284) 47 133
    VALUES (285) 47
    FROM (286) 62 67
    WHERE (287) 88
    AND (288) 90 151
    OR (289) 91 152
    SET (290) 63 135
    ON (291) 31 32
    LOAD (292) 133
    DATA (293) 133
    INFILE (294) 133
    EXPLAIN (295) 134
    EQ (296) 66 127 135
    LT (297) 128
    GT (298) 129
    LE (299) 130
    GE (300) 131
    NE (301) 132
    DATE_T (302) 46
    TEXT_T (303) 41
    ORDER_BY (304) 120
    ASC (305) 125
    SYM_NOT_NULL (306) 37
    SYM_NULL (307) 38 59
    SYM_IS_NULL (308) 107
    SYM_IS_NOT_NULL (309) 108
    SYM_IN (310) 103 104
    SYM_NOT_IN (311) 105 106
    SYM_EXISTS (312) 111
    SYM_NOT_EXISTS (313) 112
    MIN (314) 138
    MAX (315) 137
    AVG (316) 139
    COUNT (317) 140 141
    SUM (318) 136
    GROUP_BY (319) 70
    HAVING (320) 149
    SYM_LIKE (321) 101
    SYM_NOT_LIKE (322) 102
    ROUND (323) 155 156 159 160
    LENGTH (324) 157 161
    DATE_FORMAT (325) 158 162
    AS (326) 169
    DATE_STR <string> (327) 58
    NUMBER <number> (328) 42 55 60 156 160
    FLOAT <floats> (329) 56 61 155 156
    ID <string> (330) 28 30 31 32 33 39 40 41 47 62 63 66 67 83 84 86 113 114 133 135 168 169
    SSS <string> (331) 57 101 102 133 157 158 162
    UMINUS (332)


Nonterminals, with rules where they appear

    $accept (82)
        on left: 0
    commands <sql_node> (83)
        on left: 1
        on right: 0
    command_wrapper <sql_node> (84)
        on left: 2 3 4 5 6 7 8 9 10 11 12 13 14 15 16 17 18 19 20 21
        on right: 1 134
    exit_stmt <sql_node> (85)
        on left: 22
        on right: 21
    help_stmt <sql_node> (86)
        on left: 23
        on right: 20
    sync_stmt <sql_node> (87)
        on left: 24
        on right: 13
    begin_stmt <sql_node> (88)
        on left: 25
        on right: 14
    commit_stmt <sql_node> (89)
        on left: 26
        on right: 15
    rollback_stmt <sql_node> (90)
        on left: 27
        on right: 16
    drop_table_stmt <sql_node> (91)
        on left: 28
        on right: 8
    show_tables_stmt <sql_node> (92)
        on left: 29
        on right: 9
    desc_table_stmt <sql_node> (93)
        on left: 30
        on right: 10
    create_index_stmt <sql_node> (94)
        on left: 31
        on right: 11
    drop_index_stmt <sql_node> (95)
        on left: 32
        on right: 12
    create_table_stmt <sql_node> (96)
        on left: 33
        on right: 7
    attr_def_list <attr_infos> (97)
        on left: 34 35
        on right: 33 35
    attr_def <attr_info> (98)
        on left: 36 37 38
        on right: 33 35
    basic_attr_def <attr_info> (99)
        on left: 39 40 41
        on right: 36 37 38
    number <number> (100)
        on left: 42
        on right: 39
    type <number> (101)
        on left: 43 44 45 46
        on right: 39 40
    insert_stmt <sql_node> (102)
        on left: 47
        on right: 4
    value_rows <value_rows> (103)
        on left: 48 49
        on right: 47 49
    value_row <value_row> (104)
        on left: 50
        on right: 48 49
    value_list <value_list> (105)
        on left: 51 52
        on right: 50 52
    value <value> (106)
        on left: 53 54
        on right: 50 52 135
    non_negative_value <value> (107)
        on left: 55 56 57 58 59
        on right: 53 82 92
    negative_value <value> (108)
        on left: 60 61
        on right: 54
    delete_stmt <sql_node> (109)
        on left: 62
        on right: 6
    update_stmt <sql_node> (110)
        on left: 63
        on right: 5
    set_value_list <set_value_list> (111)
        on left: 64 65
        on right: 63 65
    set_value <set_value> (112)
        on left: 66
        on right: 64 65
    select_stmt <sql_node> (113)
        on left: 67 68
        on right: 3 115
    group_by <rel_attr_list> (114)
        on left: 69 70
        on right: 67
    group_by_list <rel_attr_list> (115)
        on left: 71 72
        on right: 70 72
    calc_stmt <sql_node> (116)
        on left: 73
        on right: 2
    expression_list <expression_list> (117)
        on left: 74 75
        on right: 73 75
    expression <expression> (118)
        on left: 76 77 78 79 80 81 82
        on right: 74 75 76 77 78 79 80 81
    rel_attr <rel_attr> (119)
        on left: 83 84
        on right: 71 72 124 125 126 136 137 138 139 140 144 159 160 161 162
    rel_list <relation_list> (120)
        on left: 85 86
        on right: 31 67 86
    where <expr_node_list> (121)
        on left: 87 88
        on right: 62 63 67
    expr_list <expr_node_list> (122)
        on left: 89 90 91
        on right: 88 90 91
    expr <expr_node> (123)
        on left: 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 110 111 112
        on right: 66 89 90 91 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 117 118 153
    identifier <expr_node> (124)
        on left: 113 114
        on right: 93
    sub_query <sql_node> (125)
        on left: 115
        on right: 103 105 110 111 112
    expr_set <expr_sql_set> (126)
        on left: 116 117 118
        on right: 104 106 118
    order_by <order_by_list> (127)
        on left: 119 120
        on right: 67
    order_by_list <order_by_list> (128)
        on left: 121 122 123
        on right: 120 123
    order_by_attr <order_by_attr> (129)
        on left: 124 125 126
        on right: 122 123
    comp_op <comp> (130)
        on left: 127 128 129 130 131 132
        on right: 100
    load_data_stmt <sql_node> (131)
        on left: 133
        on right: 17
    explain_stmt <sql_node> (132)
        on left: 134
        on right: 18
    set_variable_stmt <sql_node> (133)
        on left: 135
        on right: 19
    agg_func <agg_func> (134)
        on left: 136 137 138 139 140 141
        on right: 143 154
    select_expr <select_expr> (135)
        on left: 142 143 144 145
        on right: 146 147
    select_expr_list <select_expr_list> (136)
        on left: 146 147
        on right: 67 147
    having <expr_node_list> (137)
        on left: 148 149
        on right: 67
    having_list <expr_node_list> (138)
        on left: 150 151 152
        on right: 149 151 152
    expr_has_agg <expr_node> (139)
        on left: 153 154
        on right: 150 151 152
    function_node_const <function_node> (140)
        on left: 155 156 157 158
        on right: 163 165 166
    function_node_field <function_node> (141)
        on left: 159 160 161 162
        on right: 164
    function_node_all <function_node> (142)
        on left: 163 164
        on right: 145
    function_node_const_list <function_node_const_list> (143)
        on left: 165 166
        on right: 68 166
    alias <std_string> (144)
        on left: 167 168 169
        on right: 143 144 145
    opt_semicolon (145)
        on left: 170 171
        on right: 1


State 0

    0 $accept: • commands $end

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    commands           go to state 19
    command_wrapper    go to state 20
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 1

   31 create_index_stmt: CREATE • INDEX ID ON ID LBRACE ID rel_list RBRACE
   33 create_table_stmt: CREATE • TABLE ID LBRACE attr_def attr_def_list RBRACE

    TABLE  shift, and go to state 41
    INDEX  shift, and go to state 42


State 2

   28 drop_table_stmt: DROP • TABLE ID
   32 drop_index_stmt: DROP • INDEX ID ON ID

    TABLE  shift, and go to state 43
    INDEX  shift, and go to state 44


State 3

   73 calc_stmt: CALC • expression_list

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression_list     go to state 53
    expression          go to state 54


State 4

   67 select_stmt: SELECT • select_expr_list FROM ID rel_list where group_by having order_by
   68            | SELECT • function_node_const_list

    MIN          shift, and go to state 55
    MAX          shift, and go to state 56
    AVG          shift, and go to state 57
    COUNT        shift, and go to state 58
    SUM          shift, and go to state 59
    ROUND        shift, and go to state 60
    LENGTH       shift, and go to state 61
    DATE_FORMAT  shift, and go to state 62
    ID           shift, and go to state 63
    '*'          shift, and go to state 64

    rel_attr                  go to state 65
    agg_func                  go to state 66
    select_expr               go to state 67
    select_expr_list          go to state 68
    function_node_const       go to state 69
    function_node_field       go to state 70
    function_node_all         go to state 71
    function_node_const_list  go to state 72


State 5

   30 desc_table_stmt: DESC • ID

    ID  shift, and go to state 73


State 6

   29 show_tables_stmt: SHOW • TABLES

    TABLES  shift, and go to state 74


State 7

   24 sync_stmt: SYNC •

    $default  reduce using rule 24 (sync_stmt)


State 8

   47 insert_stmt: INSERT • INTO ID VALUES value_rows

    INTO  shift, and go to state 75


State 9

   62 delete_stmt: DELETE • FROM ID where

    FROM  shift, and go to state 76


State 10

   63 update_stmt: UPDATE • ID SET set_value_list where

    ID  shift, and go to state 77


State 11

   25 begin_stmt: TRX_BEGIN •

    $default  reduce using rule 25 (begin_stmt)


State 12

   26 commit_stmt: TRX_COMMIT •

    $default  reduce using rule 26 (commit_stmt)


State 13

   27 rollback_stmt: TRX_ROLLBACK •

    $default  reduce using rule 27 (rollback_stmt)


State 14

   23 help_stmt: HELP •

    $default  reduce using rule 23 (help_stmt)


State 15

   22 exit_stmt: EXIT •

    $default  reduce using rule 22 (exit_stmt)


State 16

  135 set_variable_stmt: SET • ID EQ value

    ID  shift, and go to state 78


State 17

  133 load_data_stmt: LOAD • DATA INFILE SSS INTO TABLE ID

    DATA  shift, and go to state 79


State 18

  134 explain_stmt: EXPLAIN • command_wrapper

    CREATE        shift, and go to state 1
    DROP          shift, and go to state 2
    CALC          shift, and go to state 3
    SELECT        shift, and go to state 4
    DESC          shift, and go to state 5
    SHOW          shift, and go to state 6
    SYNC          shift, and go to state 7
    INSERT        shift, and go to state 8
    DELETE        shift, and go to state 9
    UPDATE        shift, and go to state 10
    TRX_BEGIN     shift, and go to state 11
    TRX_COMMIT    shift, and go to state 12
    TRX_ROLLBACK  shift, and go to state 13
    HELP          shift, and go to state 14
    EXIT          shift, and go to state 15
    SET           shift, and go to state 16
    LOAD          shift, and go to state 17
    EXPLAIN       shift, and go to state 18

    command_wrapper    go to state 80
    exit_stmt          go to state 21
    help_stmt          go to state 22
    sync_stmt          go to state 23
    begin_stmt         go to state 24
    commit_stmt        go to state 25
    rollback_stmt      go to state 26
    drop_table_stmt    go to state 27
    show_tables_stmt   go to state 28
    desc_table_stmt    go to state 29
    create_index_stmt  go to state 30
    drop_index_stmt    go to state 31
    create_table_stmt  go to state 32
    insert_stmt        go to state 33
    delete_stmt        go to state 34
    update_stmt        go to state 35
    select_stmt        go to state 36
    calc_stmt          go to state 37
    load_data_stmt     go to state 38
    explain_stmt       go to state 39
    set_variable_stmt  go to state 40


State 19

    0 $accept: commands • $end

    $end  shift, and go to state 81


State 20

    1 commands: command_wrapper • opt_semicolon

    SEMICOLON  shift, and go to state 82

    $default  reduce using rule 170 (opt_semicolon)

    opt_semicolon  go to state 83


State 21

   21 command_wrapper: exit_stmt •

    $default  reduce using rule 21 (command_wrapper)


State 22

   20 command_wrapper: help_stmt •

    $default  reduce using rule 20 (command_wrapper)


State 23

   13 command_wrapper: sync_stmt •

    $default  reduce using rule 13 (command_wrapper)


State 24

   14 command_wrapper: begin_stmt •

    $default  reduce using rule 14 (command_wrapper)


State 25

   15 command_wrapper: commit_stmt •

    $default  reduce using rule 15 (command_wrapper)


State 26

   16 command_wrapper: rollback_stmt •

    $default  reduce using rule 16 (command_wrapper)


State 27

    8 command_wrapper: drop_table_stmt •

    $default  reduce using rule 8 (command_wrapper)


State 28

    9 command_wrapper: show_tables_stmt •

    $default  reduce using rule 9 (command_wrapper)


State 29

   10 command_wrapper: desc_table_stmt •

    $default  reduce using rule 10 (command_wrapper)


State 30

   11 command_wrapper: create_index_stmt •

    $default  reduce using rule 11 (command_wrapper)


State 31

   12 command_wrapper: drop_index_stmt •

    $default  reduce using rule 12 (command_wrapper)


State 32

    7 command_wrapper: create_table_stmt •

    $default  reduce using rule 7 (command_wrapper)


State 33

    4 command_wrapper: insert_stmt •

    $default  reduce using rule 4 (command_wrapper)


State 34

    6 command_wrapper: delete_stmt •

    $default  reduce using rule 6 (command_wrapper)


State 35

    5 command_wrapper: update_stmt •

    $default  reduce using rule 5 (command_wrapper)


State 36

    3 command_wrapper: select_stmt •

    $default  reduce using rule 3 (command_wrapper)


State 37

    2 command_wrapper: calc_stmt •

    $default  reduce using rule 2 (command_wrapper)


State 38

   17 command_wrapper: load_data_stmt •

    $default  reduce using rule 17 (command_wrapper)


State 39

   18 command_wrapper: explain_stmt •

    $default  reduce using rule 18 (command_wrapper)


State 40

   19 command_wrapper: set_variable_stmt •

    $default  reduce using rule 19 (command_wrapper)


State 41

   33 create_table_stmt: CREATE TABLE • ID LBRACE attr_def attr_def_list RBRACE

    ID  shift, and go to state 84


State 42

   31 create_index_stmt: CREATE INDEX • ID ON ID LBRACE ID rel_list RBRACE

    ID  shift, and go to state 85


State 43

   28 drop_table_stmt: DROP TABLE • ID

    ID  shift, and go to state 86


State 44

   32 drop_index_stmt: DROP INDEX • ID ON ID

    ID  shift, and go to state 87


State 45

   80 expression: LBRACE • expression RBRACE

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 88


State 46

   59 non_negative_value: SYM_NULL •

    $default  reduce using rule 59 (non_negative_value)


State 47

   58 non_negative_value: DATE_STR •

    $default  reduce using rule 58 (non_negative_value)


State 48

   55 non_negative_value: NUMBER •

    $default  reduce using rule 55 (non_negative_value)


State 49

   56 non_negative_value: FLOAT •

    $default  reduce using rule 56 (non_negative_value)


State 50

   57 non_negative_value: SSS •

    $default  reduce using rule 57 (non_negative_value)


State 51

   81 expression: '-' • expression

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 89


State 52

   82 expression: non_negative_value •

    $default  reduce using rule 82 (expression)


State 53

   73 calc_stmt: CALC expression_list •

    $default  reduce using rule 73 (calc_stmt)


State 54

   74 expression_list: expression •
   75                | expression • COMMA expression_list
   76 expression: expression • '+' expression
   77           | expression • '-' expression
   78           | expression • '*' expression
   79           | expression • '/' expression

    COMMA  shift, and go to state 90
    '+'    shift, and go to state 91
    '-'    shift, and go to state 92
    '*'    shift, and go to state 93
    '/'    shift, and go to state 94

    $default  reduce using rule 74 (expression_list)


State 55

  138 agg_func: MIN • LBRACE rel_attr RBRACE

    LBRACE  shift, and go to state 95


State 56

  137 agg_func: MAX • LBRACE rel_attr RBRACE

    LBRACE  shift, and go to state 96


State 57

  139 agg_func: AVG • LBRACE rel_attr RBRACE

    LBRACE  shift, and go to state 97


State 58

  140 agg_func: COUNT • LBRACE rel_attr RBRACE
  141         | COUNT • LBRACE '*' RBRACE

    LBRACE  shift, and go to state 98


State 59

  136 agg_func: SUM • LBRACE rel_attr RBRACE

    LBRACE  shift, and go to state 99


State 60

  155 function_node_const: ROUND • LBRACE FLOAT RBRACE
  156                    | ROUND • LBRACE FLOAT COMMA NUMBER RBRACE
  159 function_node_field: ROUND • LBRACE rel_attr RBRACE
  160                    | ROUND • LBRACE rel_attr COMMA NUMBER RBRACE

    LBRACE  shift, and go to state 100


State 61

  157 function_node_const: LENGTH • LBRACE SSS RBRACE
  161 function_node_field: LENGTH • LBRACE rel_attr RBRACE

    LBRACE  shift, and go to state 101


State 62

  158 function_node_const: DATE_FORMAT • LBRACE SSS COMMA SSS RBRACE
  162 function_node_field: DATE_FORMAT • LBRACE rel_attr COMMA SSS RBRACE

    LBRACE  shift, and go to state 102


State 63

   83 rel_attr: ID •
   84         | ID • DOT ID

    DOT  shift, and go to state 103

    $default  reduce using rule 83 (rel_attr)


State 64

  142 select_expr: '*' •

    $default  reduce using rule 142 (select_expr)


State 65

  144 select_expr: rel_attr • alias

    AS  shift, and go to state 104
    ID  shift, and go to state 105

    $default  reduce using rule 167 (alias)

    alias  go to state 106


State 66

  143 select_expr: agg_func • alias

    AS  shift, and go to state 104
    ID  shift, and go to state 105

    $default  reduce using rule 167 (alias)

    alias  go to state 107


State 67

  146 select_expr_list: select_expr •
  147                 | select_expr • COMMA select_expr_list

    COMMA  shift, and go to state 108

    $default  reduce using rule 146 (select_expr_list)


State 68

   67 select_stmt: SELECT select_expr_list • FROM ID rel_list where group_by having order_by

    FROM  shift, and go to state 109


State 69

  163 function_node_all: function_node_const •
  165 function_node_const_list: function_node_const •
  166                         | function_node_const • COMMA function_node_const_list

    COMMA  shift, and go to state 110

    $end       reduce using rule 165 (function_node_const_list)
    SEMICOLON  reduce using rule 165 (function_node_const_list)
    RBRACE     reduce using rule 165 (function_node_const_list)
    COMMA      [reduce using rule 163 (function_node_all)]
    $default   reduce using rule 163 (function_node_all)

    shift/reduce conflict on token COMMA:
      163 function_node_all: function_node_const •
      166 function_node_const_list: function_node_const • COMMA function_node_const_list
      First example: SELECT function_node_const • COMMA function_node_const_list opt_semicolon $end
      Shift derivation
        $accept
        ↳ 0: commands                                                                                         $end
             ↳ 1: command_wrapper                                                               opt_semicolon
                  ↳ 3: select_stmt
                       ↳ 68: SELECT function_node_const_list
                                    ↳ 166: function_node_const • COMMA function_node_const_list
      Second example: SELECT function_node_const • alias COMMA select_expr_list FROM ID rel_list where group_by having order_by opt_semicolon $end
      Reduce derivation
        $accept
        ↳ 0: commands                                                                                                                                                     $end
             ↳ 1: command_wrapper                                                                                                                           opt_semicolon
                  ↳ 3: select_stmt
                       ↳ 67: SELECT select_expr_list                                                        FROM ID rel_list where group_by having order_by
                                    ↳ 147: select_expr                               COMMA select_expr_list
                                           ↳ 145: function_node_all            alias
                                                  ↳ 163: function_node_const •



State 70

  164 function_node_all: function_node_field •

    $default  reduce using rule 164 (function_node_all)


State 71

  145 select_expr: function_node_all • alias

    AS  shift, and go to state 104
    ID  shift, and go to state 105

    $default  reduce using rule 167 (alias)

    alias  go to state 111


State 72

   68 select_stmt: SELECT function_node_const_list •

    $default  reduce using rule 68 (select_stmt)


State 73

   30 desc_table_stmt: DESC ID •

    $default  reduce using rule 30 (desc_table_stmt)


State 74

   29 show_tables_stmt: SHOW TABLES •

    $default  reduce using rule 29 (show_tables_stmt)


State 75

   47 insert_stmt: INSERT INTO • ID VALUES value_rows

    ID  shift, and go to state 112


State 76

   62 delete_stmt: DELETE FROM • ID where

    ID  shift, and go to state 113


State 77

   63 update_stmt: UPDATE ID • SET set_value_list where

    SET  shift, and go to state 114


State 78

  135 set_variable_stmt: SET ID • EQ value

    EQ  shift, and go to state 115


State 79

  133 load_data_stmt: LOAD DATA • INFILE SSS INTO TABLE ID

    INFILE  shift, and go to state 116


State 80

  134 explain_stmt: EXPLAIN command_wrapper •

    $default  reduce using rule 134 (explain_stmt)


State 81

    0 $accept: commands $end •

    $default  accept


State 82

  171 opt_semicolon: SEMICOLON •

    $default  reduce using rule 171 (opt_semicolon)


State 83

    1 commands: command_wrapper opt_semicolon •

    $default  reduce using rule 1 (commands)


State 84

   33 create_table_stmt: CREATE TABLE ID • LBRACE attr_def attr_def_list RBRACE

    LBRACE  shift, and go to state 117


State 85

   31 create_index_stmt: CREATE INDEX ID • ON ID LBRACE ID rel_list RBRACE

    ON  shift, and go to state 118


State 86

   28 drop_table_stmt: DROP TABLE ID •

    $default  reduce using rule 28 (drop_table_stmt)


State 87

   32 drop_index_stmt: DROP INDEX ID • ON ID

    ON  shift, and go to state 119


State 88

   76 expression: expression • '+' expression
   77           | expression • '-' expression
   78           | expression • '*' expression
   79           | expression • '/' expression
   80           | LBRACE expression • RBRACE

    RBRACE  shift, and go to state 120
    '+'     shift, and go to state 91
    '-'     shift, and go to state 92
    '*'     shift, and go to state 93
    '/'     shift, and go to state 94


State 89

   76 expression: expression • '+' expression
   77           | expression • '-' expression
   78           | expression • '*' expression
   79           | expression • '/' expression
   81           | '-' expression •

    $default  reduce using rule 81 (expression)


State 90

   75 expression_list: expression COMMA • expression_list

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression_list     go to state 121
    expression          go to state 54


State 91

   76 expression: expression '+' • expression

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 122


State 92

   77 expression: expression '-' • expression

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 123


State 93

   78 expression: expression '*' • expression

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 124


State 94

   79 expression: expression '/' • expression

    LBRACE    shift, and go to state 45
    SYM_NULL  shift, and go to state 46
    DATE_STR  shift, and go to state 47
    NUMBER    shift, and go to state 48
    FLOAT     shift, and go to state 49
    SSS       shift, and go to state 50
    '-'       shift, and go to state 51

    non_negative_value  go to state 52
    expression          go to state 125


State 95

  138 agg_func: MIN LBRACE • rel_attr RBRACE

    ID  shift, and go to state 63

    rel_attr  go to state 126


State 96

  137 agg_func: MAX LBRACE • rel_attr RBRACE

    ID  shift, and go to state 63

    rel_attr  go to state 127


State 97

  139 agg_func: AVG LBRACE • rel_attr RBRACE

    ID  shift, and go to state 63

    rel_attr  go to state 128


State 98
